@@ -4,6 +4,7 @@ Release Notes:
 iri-0.4: 
   fixed mailto scheme rules
   set file: to allow sameSchemeRelativeRefs in jenaImplementation
+  fixed bug in relativize code
 
 iri-0.3:  First released version
 
